<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="FSS_Standard" Id="{2f78c9ed-5b56-4ebd-a1d8-50ebcf132e4e}">
    <Declaration><![CDATA[///////////
// Structure FSS standard (ex: OPC).  
//////////

TYPE FSS_Standard :
STRUCT	
	MesData				: FSS;  (* (NA) Object *)
END_STRUCT		                
END_TYPE                        
                                ]]></Declaration>
  </DUT>
</TcPlcObject>